--- a/DomasticAidManagementSystem/appsettings.json
+++ b/DomasticAidManagementSystem/appsettings.json
@@ -7,7 +7,7 @@
   },
   "APIDBContext": {
     "CommandTimeout": 800,
-    "SchemaName": "dbo"
+    "SchemaName": "DomesticAid"
   },
   "ConnectionStrings": {
     "SqlServerConnString": "Server=103.235.104.80,1433;Database=nevergiveuphemanth_in_;User Id=root;Password=7yt7mW1~2;Encrypt=False;"
@@ -17,7 +17,7 @@
     "SmtpServer": "smtp.gmail.com",
     "Port": 587,
     "SenderEmail": "nammamanekarchu@gmail.com",
-    "SenderPassword": "wknj wfmw mumv vxqm"
+    "SenderPassword": "cjta cyqj alas xzeo"
   },
   "AllowedHosts": "*"
 }
