--- a/DomasticAidManagementSystem/DomasticAidManagementSystem.csproj
+++ b/DomasticAidManagementSystem/DomasticAidManagementSystem.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="iTextSharp" Version="5.5.13.4" />
     <PackageReference Include="MailKit" Version="4.10.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.25" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.25" />
